--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'checkstyle'
 }
 
 repositories {
@@ -46,4 +47,10 @@ shadowJar {
 
 run {
     standardInput = System.in
+}
+
+checkstyle {
+    toolVersion = '10.2'
+    configFile = file('config/checkstyle/checkstyle.xml') // Use custom checkstyle.xml
+    configProperties.suppressionsFile = file('config/checkstyle/suppressions.xml') // Use custom suppressions.xml
 }
