chore(release): prepare for final release
- Ensure all dependencies are up to date
- Verify main class configuration in `build.gradle`
- Confirm correct package structure and classpath
- Update documentation and README

--- a/build.gradle
+++ b/build.gradle
@@ -51,16 +51,14 @@ test {
     }
 }
 
-application {
-    mainClass.set('seedu.giorgo.Main')
-}
+//application {
+//    mainClass.set('seedu.giorgo.Main')
+//}
+mainClassName = 'main.java.Launcher'
 
 shadowJar {
-    archiveBaseName = "main"
+    archiveBaseName = "giorgo"
     archiveClassifier = null
-    manifest {
-        attributes 'Main-Class': 'seedu.giorgo.Main'
-    }
 }
 
 run {
@@ -68,6 +66,7 @@ run {
             '--module-path', classpath.asPath,
             '--add-modules', 'javafx.controls,javafx.fxml'
     ]
+    standardInput = System.in
 }
 
 checkstyle {
